@@ -34,6 +34,7 @@ import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.settings.ClusterSettings;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.core.Nullable;
+import org.elasticsearch.health.Diagnosis;
 import org.elasticsearch.health.HealthIndicatorDetails;
 import org.elasticsearch.health.HealthIndicatorImpact;
 import org.elasticsearch.health.HealthIndicatorResult;
@@ -41,12 +42,10 @@ import org.elasticsearch.health.HealthIndicatorService;
 import org.elasticsearch.health.HealthStatus;
 import org.elasticsearch.health.ImpactArea;
 import org.elasticsearch.health.SimpleHealthIndicatorDetails;
-import org.elasticsearch.health.UserAction;
+import org.elasticsearch.health.node.HealthInfo;
 import org.elasticsearch.snapshots.SnapshotShardSizeInfo;
 
 import java.util.ArrayList;
-import java.util.Collections;
-import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -68,10 +67,12 @@ import static org.elasticsearch.cluster.metadata.IndexMetadata.INDEX_ROUTING_REQ
 import static org.elasticsearch.cluster.routing.allocation.decider.EnableAllocationDecider.INDEX_ROUTING_ALLOCATION_ENABLE_SETTING;
 import static org.elasticsearch.cluster.routing.allocation.decider.ShardsLimitAllocationDecider.CLUSTER_TOTAL_SHARDS_PER_NODE_SETTING;
 import static org.elasticsearch.cluster.routing.allocation.decider.ShardsLimitAllocationDecider.INDEX_TOTAL_SHARDS_PER_NODE_SETTING;
+import static org.elasticsearch.health.Diagnosis.Resource.Type.INDEX;
 import static org.elasticsearch.health.HealthStatus.GREEN;
 import static org.elasticsearch.health.HealthStatus.RED;
 import static org.elasticsearch.health.HealthStatus.YELLOW;
-import static org.elasticsearch.health.ServerHealthComponents.DATA;
+import static org.elasticsearch.health.node.HealthIndicatorDisplayValues.getTruncatedIndices;
+import static org.elasticsearch.health.node.HealthIndicatorDisplayValues.indicesComparatorByPriorityAndName;
 
 /**
  * This indicator reports health for shards.
@@ -92,8 +93,6 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
 
     private static final String DATA_TIER_ALLOCATION_DECIDER_NAME = "data_tier";
 
-    public static final String HELP_URL = "https://ela.st/fix-shard-allocation";
-
     private final ClusterService clusterService;
     private final AllocationService allocationService;
 
@@ -108,17 +107,7 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
     }
 
     @Override
-    public String component() {
-        return DATA;
-    }
-
-    @Override
-    public String helpURL() {
-        return HELP_URL;
-    }
-
-    @Override
-    public HealthIndicatorResult calculate(boolean explain) {
+    public HealthIndicatorResult calculate(boolean verbose, HealthInfo healthInfo) {
         var state = clusterService.state();
         var shutdown = state.getMetadata().custom(NodesShutdownMetadata.TYPE, NodesShutdownMetadata.EMPTY);
         var status = new ShardAllocationStatus(state.getMetadata());
@@ -126,45 +115,64 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
         for (IndexRoutingTable indexShardRouting : state.routingTable()) {
             for (int i = 0; i < indexShardRouting.size(); i++) {
                 IndexShardRoutingTable shardRouting = indexShardRouting.shard(i);
-                status.addPrimary(shardRouting.primaryShard(), state, shutdown, explain);
+                status.addPrimary(shardRouting.primaryShard(), state, shutdown, verbose);
                 for (ShardRouting replicaShard : shardRouting.replicaShards()) {
-                    status.addReplica(replicaShard, state, shutdown, explain);
+                    status.addReplica(replicaShard, state, shutdown, verbose);
                 }
             }
         }
         return createIndicator(
             status.getStatus(),
-            status.getSummary(),
-            status.getDetails(explain),
+            status.getSymptom(),
+            status.getDetails(verbose),
             status.getImpacts(),
-            status.getUserActions(explain)
+            status.getDiagnosis(verbose)
         );
     }
 
+    // Impact IDs
+    public static final String PRIMARY_UNASSIGNED_IMPACT_ID = "primary_unassigned";
+    public static final String REPLICA_UNASSIGNED_IMPACT_ID = "replica_unassigned";
+
     public static final String RESTORE_FROM_SNAPSHOT_ACTION_GUIDE = "http://ela.st/restore-snapshot";
-    public static final UserAction.Definition ACTION_RESTORE_FROM_SNAPSHOT = new UserAction.Definition(
+    public static final Diagnosis.Definition ACTION_RESTORE_FROM_SNAPSHOT = new Diagnosis.Definition(
+        NAME,
         "restore_from_snapshot",
         "Elasticsearch isn't allowed to allocate some shards because there are no copies of the shards in the cluster. Elasticsearch will "
-            + "allocate these shards when nodes holding good copies of the data join the cluster. If no such node is available, restore "
-            + "these indices from a recent snapshot.",
+            + "allocate these shards when nodes holding good copies of the data join the cluster.",
+        "If no such node is available, restore these indices from a recent snapshot.",
         RESTORE_FROM_SNAPSHOT_ACTION_GUIDE
     );
 
     public static final String DIAGNOSE_SHARDS_ACTION_GUIDE = "http://ela.st/diagnose-shards";
-    public static final UserAction.Definition ACTION_CHECK_ALLOCATION_EXPLAIN_API = new UserAction.Definition(
+    public static final Diagnosis.Definition ACTION_CHECK_ALLOCATION_EXPLAIN_API = new Diagnosis.Definition(
+        NAME,
         "explain_allocations",
-        "Elasticsearch isn't allowed to allocate some shards from these indices to any of the nodes in the cluster. Diagnose the issue by "
-            + "calling the allocation explain API for an index [GET _cluster/allocation/explain]. Choose a node to which you expect a "
-            + "shard to be allocated, find this node in the node-by-node explanation, and address the reasons which prevent Elasticsearch "
-            + "from allocating the shard.",
+        "Elasticsearch isn't allowed to allocate some shards from these indices to any of the nodes in the cluster.",
+        "Diagnose the issue by calling the allocation explain API for an index [GET _cluster/allocation/explain]. Choose a node to which "
+            + "you expect a shard to be allocated, find this node in the node-by-node explanation, and address the reasons which prevent "
+            + "Elasticsearch from allocating the shard.",
         DIAGNOSE_SHARDS_ACTION_GUIDE
     );
 
+    public static final String FIX_DELAYED_SHARDS_GUIDE = "http://ela.st/fix-delayed-shard-allocation";
+    public static final Diagnosis.Definition DIAGNOSIS_WAIT_FOR_OR_FIX_DELAYED_SHARDS = new Diagnosis.Definition(
+        NAME,
+        "delayed_shard_allocations",
+        "Elasticsearch is not allocating some shards because they are marked for delayed allocation. Shards that have become "
+            + "unavailable are usually marked for delayed allocation because it is more efficient to wait and see if the shards return "
+            + "on their own than to recover the shard immediately.",
+        "Elasticsearch will reallocate the shards when the delay has elapsed. No action is required by the user.",
+        FIX_DELAYED_SHARDS_GUIDE
+    );
+
     public static final String ENABLE_INDEX_ALLOCATION_GUIDE = "http://ela.st/fix-index-allocation";
-    public static final UserAction.Definition ACTION_ENABLE_INDEX_ROUTING_ALLOCATION = new UserAction.Definition(
+    public static final Diagnosis.Definition ACTION_ENABLE_INDEX_ROUTING_ALLOCATION = new Diagnosis.Definition(
+        NAME,
         "enable_index_allocations",
         "Elasticsearch isn't allowed to allocate some shards from these indices because allocation for those shards has been disabled at "
-            + "the index level. Check that the ["
+            + "the index level.",
+        "Check that the ["
             + INDEX_ROUTING_ALLOCATION_ENABLE_SETTING.getKey()
             + "] index settings are set to ["
             + EnableAllocationDecider.Allocation.ALL.toString().toLowerCase(Locale.getDefault())
@@ -172,10 +180,12 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
         ENABLE_INDEX_ALLOCATION_GUIDE
     );
     public static final String ENABLE_CLUSTER_ALLOCATION_ACTION_GUIDE = "http://ela.st/fix-cluster-allocation";
-    public static final UserAction.Definition ACTION_ENABLE_CLUSTER_ROUTING_ALLOCATION = new UserAction.Definition(
+    public static final Diagnosis.Definition ACTION_ENABLE_CLUSTER_ROUTING_ALLOCATION = new Diagnosis.Definition(
+        NAME,
         "enable_cluster_allocations",
         "Elasticsearch isn't allowed to allocate some shards from these indices because allocation for those shards has been disabled at "
-            + "the cluster level. Check that the ["
+            + "the cluster level.",
+        "Check that the ["
             + EnableAllocationDecider.CLUSTER_ROUTING_ALLOCATION_ENABLE_SETTING.getKey()
             + "] cluster setting is set to ["
             + EnableAllocationDecider.Allocation.ALL.toString().toLowerCase(Locale.getDefault())
@@ -184,42 +194,45 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
     );
 
     public static final String ENABLE_TIER_ACTION_GUIDE = "http://ela.st/enable-tier";
-    public static final Map<String, UserAction.Definition> ACTION_ENABLE_TIERS_LOOKUP = DataTier.ALL_DATA_TIERS.stream()
+    public static final Map<String, Diagnosis.Definition> ACTION_ENABLE_TIERS_LOOKUP = DataTier.ALL_DATA_TIERS.stream()
         .collect(
             Collectors.toUnmodifiableMap(
                 tier -> tier,
-                tier -> new UserAction.Definition(
-                    "enable_data_tiers_" + tier,
+                tier -> new Diagnosis.Definition(
+                    NAME,
+                    "enable_data_tiers:tier:" + tier,
                     "Elasticsearch isn't allowed to allocate some shards from these indices because the indices expect to be allocated to "
-                        + "data tier nodes, but there were not any nodes with the expected tiers found in the cluster. Add nodes with "
-                        + "the ["
-                        + tier
-                        + "] role to the cluster.",
+                        + "data tier nodes, but there were not any nodes with the expected tiers found in the cluster.",
+                    "Add nodes with the [" + tier + "] role to the cluster.",
                     ENABLE_TIER_ACTION_GUIDE
                 )
             )
         );
 
     public static final String INCREASE_SHARD_LIMIT_ACTION_GUIDE = "http://ela.st/index-total-shards";
-    public static final UserAction.Definition ACTION_INCREASE_SHARD_LIMIT_INDEX_SETTING = new UserAction.Definition(
+    public static final Diagnosis.Definition ACTION_INCREASE_SHARD_LIMIT_INDEX_SETTING = new Diagnosis.Definition(
+        NAME,
         "increase_shard_limit_index_setting",
         "Elasticsearch isn't allowed to allocate some shards from these indices to any data nodes because each node has reached the index "
-            + "shard limit. Increase the values for the ["
+            + "shard limit. ",
+        "Increase the values for the ["
             + INDEX_TOTAL_SHARDS_PER_NODE_SETTING.getKey()
             + "] index setting on each index or add more nodes to the target tiers.",
         INCREASE_SHARD_LIMIT_ACTION_GUIDE
     );
 
-    public static final Map<String, UserAction.Definition> ACTION_INCREASE_SHARD_LIMIT_INDEX_SETTING_LOOKUP = DataTier.ALL_DATA_TIERS
+    public static final Map<String, Diagnosis.Definition> ACTION_INCREASE_SHARD_LIMIT_INDEX_SETTING_LOOKUP = DataTier.ALL_DATA_TIERS
         .stream()
         .collect(
             Collectors.toUnmodifiableMap(
                 tier -> tier,
-                tier -> new UserAction.Definition(
-                    "increase_shard_limit_index_setting_" + tier,
+                tier -> new Diagnosis.Definition(
+                    NAME,
+                    "increase_shard_limit_index_setting:tier:" + tier,
                     "Elasticsearch isn't allowed to allocate some shards from these indices because each node in the ["
                         + tier
-                        + "] tier has reached the index shard limit. Increase the values for the ["
+                        + "] tier has reached the index shard limit. ",
+                    "Increase the values for the ["
                         + INDEX_TOTAL_SHARDS_PER_NODE_SETTING.getKey()
                         + "] index setting on each index or add more nodes to the target tiers.",
                     INCREASE_SHARD_LIMIT_ACTION_GUIDE
@@ -228,25 +241,29 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
         );
 
     public static final String INCREASE_CLUSTER_SHARD_LIMIT_ACTION_GUIDE = "http://ela.st/cluster-total-shards";
-    public static final UserAction.Definition ACTION_INCREASE_SHARD_LIMIT_CLUSTER_SETTING = new UserAction.Definition(
+    public static final Diagnosis.Definition ACTION_INCREASE_SHARD_LIMIT_CLUSTER_SETTING = new Diagnosis.Definition(
+        NAME,
         "increase_shard_limit_cluster_setting",
         "Elasticsearch isn't allowed to allocate some shards from these indices to any data nodes because each node has reached the "
-            + "cluster shard limit. Increase the values for the ["
+            + "cluster shard limit.",
+        "Increase the values for the ["
             + CLUSTER_TOTAL_SHARDS_PER_NODE_SETTING.getKey()
             + "] cluster setting or add more nodes to the target tiers.",
         INCREASE_CLUSTER_SHARD_LIMIT_ACTION_GUIDE
     );
 
-    public static final Map<String, UserAction.Definition> ACTION_INCREASE_SHARD_LIMIT_CLUSTER_SETTING_LOOKUP = DataTier.ALL_DATA_TIERS
+    public static final Map<String, Diagnosis.Definition> ACTION_INCREASE_SHARD_LIMIT_CLUSTER_SETTING_LOOKUP = DataTier.ALL_DATA_TIERS
         .stream()
         .collect(
             Collectors.toUnmodifiableMap(
                 tier -> tier,
-                tier -> new UserAction.Definition(
-                    "increase_shard_limit_cluster_setting_" + tier,
+                tier -> new Diagnosis.Definition(
+                    NAME,
+                    "increase_shard_limit_cluster_setting:tier:" + tier,
                     "Elasticsearch isn't allowed to allocate some shards from these indices because each node in the ["
                         + tier
-                        + "] tier has reached the cluster shard limit. Increase the values for the ["
+                        + "] tier has reached the cluster shard limit. ",
+                    "Increase the values for the ["
                         + CLUSTER_TOTAL_SHARDS_PER_NODE_SETTING.getKey()
                         + "] cluster setting or add more nodes to the target tiers.",
                     INCREASE_CLUSTER_SHARD_LIMIT_ACTION_GUIDE
@@ -255,47 +272,97 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
         );
 
     public static final String MIGRATE_TO_TIERS_ACTION_GUIDE = "http://ela.st/migrate-to-tiers";
-    public static final UserAction.Definition ACTION_MIGRATE_TIERS_AWAY_FROM_REQUIRE_DATA = new UserAction.Definition(
+    public static final Diagnosis.Definition ACTION_MIGRATE_TIERS_AWAY_FROM_REQUIRE_DATA = new Diagnosis.Definition(
+        NAME,
         "migrate_data_tiers_require_data",
         "Elasticsearch isn't allowed to allocate some shards from these indices to any nodes in the desired data tiers because the "
-            + "indices are configured with allocation filter rules that are incompatible with the nodes in this tier. Remove ["
+            + "indices are configured with allocation filter rules that are incompatible with the nodes in this tier.",
+        "Remove ["
             + INDEX_ROUTING_REQUIRE_GROUP_PREFIX
             + ".data] from the index settings or try migrating to data tiers by first stopping ILM [POST /_ilm/stop] and then using "
             + "the data tier migration action [POST /_ilm/migrate_to_data_tiers]. Finally, restart ILM [POST /_ilm/start].",
         MIGRATE_TO_TIERS_ACTION_GUIDE
     );
 
-    public static final UserAction.Definition ACTION_MIGRATE_TIERS_AWAY_FROM_INCLUDE_DATA = new UserAction.Definition(
+    public static final Map<String, Diagnosis.Definition> ACTION_MIGRATE_TIERS_AWAY_FROM_REQUIRE_DATA_LOOKUP = DataTier.ALL_DATA_TIERS
+        .stream()
+        .collect(
+            Collectors.toUnmodifiableMap(
+                tier -> tier,
+                tier -> new Diagnosis.Definition(
+                    NAME,
+                    "migrate_data_tiers_require_data:tier:" + tier,
+                    "Elasticsearch isn't allowed to allocate some shards from these indices to any nodes in the ["
+                        + tier
+                        + "] data tier because the indices are configured with allocation filter rules that are incompatible with the "
+                        + "nodes in this tier.",
+                    "Remove ["
+                        + INDEX_ROUTING_REQUIRE_GROUP_PREFIX
+                        + ".data] from the index settings or try migrating to data tiers by first stopping ILM [POST /_ilm/stop] and then "
+                        + "using the data tier migration action [POST /_ilm/migrate_to_data_tiers]. "
+                        + "Finally, restart ILM [POST /_ilm/start].",
+                    MIGRATE_TO_TIERS_ACTION_GUIDE
+                )
+            )
+        );
+
+    public static final Diagnosis.Definition ACTION_MIGRATE_TIERS_AWAY_FROM_INCLUDE_DATA = new Diagnosis.Definition(
+        NAME,
         "migrate_data_tiers_include_data",
         "Elasticsearch isn't allowed to allocate some shards from these indices to any nodes in the desired data tiers because the "
-            + "indices are configured with allocation filter rules that are incompatible with the nodes in this tier. Remove ["
+            + "indices are configured with allocation filter rules that are incompatible with the nodes in this tier. ",
+        "Remove ["
             + INDEX_ROUTING_INCLUDE_GROUP_PREFIX
             + ".data] from the index settings or try migrating to data tiers by first stopping ILM [POST /_ilm/stop] and then using "
             + "the data tier migration action [POST /_ilm/migrate_to_data_tiers]. Finally, restart ILM [POST /_ilm/start].",
         MIGRATE_TO_TIERS_ACTION_GUIDE
     );
 
-    public static final String NODE_CAPACITY_ACTION_GUIDE = "http://ela.st/node-capacity";
-    public static final UserAction.Definition ACTION_INCREASE_NODE_CAPACITY = new UserAction.Definition(
-        "increase_node_capacity_for_allocations",
-        "Elasticsearch isn't allowed to allocate some shards from these indices because there are not enough nodes in the cluster to "
-            + "allocate each shard copy on a different node. Increase the number of nodes in the cluster or decrease the number of "
-            + "replica shards in the affected indices.",
-        NODE_CAPACITY_ACTION_GUIDE
-    );
-
-    public static final Map<String, UserAction.Definition> ACTION_INCREASE_TIER_CAPACITY_LOOKUP = DataTier.ALL_DATA_TIERS.stream()
+    public static final Map<String, Diagnosis.Definition> ACTION_MIGRATE_TIERS_AWAY_FROM_INCLUDE_DATA_LOOKUP = DataTier.ALL_DATA_TIERS
+        .stream()
         .collect(
             Collectors.toUnmodifiableMap(
                 tier -> tier,
-                tier -> new UserAction.Definition(
-                    "increase_tier_capacity_for_allocations_" + tier,
+                tier -> new Diagnosis.Definition(
+                    NAME,
+                    "migrate_data_tiers_include_data:tier:" + tier,
+                    "Elasticsearch isn't allowed to allocate some shards from these indices to any nodes in the ["
+                        + tier
+                        + "] data tier because the indices are configured with allocation filter rules that are incompatible with the "
+                        + "nodes in this tier.",
+                    "Remove ["
+                        + INDEX_ROUTING_INCLUDE_GROUP_PREFIX
+                        + ".data] from the index settings or try migrating to data tiers by first stopping ILM [POST /_ilm/stop] and then "
+                        + "using the data tier migration action [POST /_ilm/migrate_to_data_tiers]. Finally, restart ILM "
+                        + "[POST /_ilm/start].",
+                    MIGRATE_TO_TIERS_ACTION_GUIDE
+                )
+            )
+        );
+
+    public static final String TIER_CAPACITY_ACTION_GUIDE = "http://ela.st/tier-capacity";
+    public static final Diagnosis.Definition ACTION_INCREASE_NODE_CAPACITY = new Diagnosis.Definition(
+        NAME,
+        "increase_node_capacity_for_allocations",
+        "Elasticsearch isn't allowed to allocate some shards from these indices because there are not enough nodes in the cluster to "
+            + "allocate each shard copy on a different node.",
+        "Increase the number of nodes in the cluster or decrease the number of replica shards in the affected indices.",
+        TIER_CAPACITY_ACTION_GUIDE
+    );
+
+    public static final Map<String, Diagnosis.Definition> ACTION_INCREASE_TIER_CAPACITY_LOOKUP = DataTier.ALL_DATA_TIERS.stream()
+        .collect(
+            Collectors.toUnmodifiableMap(
+                tier -> tier,
+                tier -> new Diagnosis.Definition(
+                    NAME,
+                    "increase_tier_capacity_for_allocations:tier:" + tier,
                     "Elasticsearch isn't allowed to allocate some shards from these indices to any of the nodes in the desired data tier "
                         + "because there are not enough nodes in the ["
                         + tier
-                        + "] tier to allocate each shard copy on a different node. Increase the number of nodes in this tier or "
-                        + "decrease the number of replica shards in the affected indices.",
-                    NODE_CAPACITY_ACTION_GUIDE
+                        + "] tier to allocate each shard copy on a different node.",
+                    "Increase the number of nodes in this tier or decrease the number of replica shards in the affected indices.",
+                    TIER_CAPACITY_ACTION_GUIDE
                 )
             )
         );
@@ -309,9 +376,9 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
         private int started = 0;
         private int relocating = 0;
         private final Set<String> indicesWithUnavailableShards = new HashSet<>();
-        private final Map<UserAction.Definition, Set<String>> userActions = new HashMap<>();
+        private final Map<Diagnosis.Definition, Set<String>> diagnosisDefinitions = new HashMap<>();
 
-        public void increment(ShardRouting routing, ClusterState state, NodesShutdownMetadata shutdowns, boolean explain) {
+        public void increment(ShardRouting routing, ClusterState state, NodesShutdownMetadata shutdowns, boolean verbose) {
             boolean isNew = isUnassignedDueToNewInitialization(routing);
             boolean isRestarting = isUnassignedDueToTimelyRestart(routing, shutdowns);
             available &= routing.active() || isRestarting || isNew;
@@ -327,9 +394,9 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
                         unassigned_restarting++;
                     } else {
                         unassigned++;
-                        if (explain) {
+                        if (verbose) {
                             diagnoseUnassignedShardRouting(routing, state).forEach(
-                                definition -> addUserAction(definition, routing.getIndexName())
+                                definition -> addDefinition(definition, routing.getIndexName())
                             );
                         }
                     }
@@ -340,8 +407,8 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
             }
         }
 
-        private void addUserAction(UserAction.Definition actionDef, String indexName) {
-            userActions.computeIfAbsent(actionDef, (k) -> new HashSet<>()).add(indexName);
+        private void addDefinition(Diagnosis.Definition diagnosisDefinition, String indexName) {
+            diagnosisDefinitions.computeIfAbsent(diagnosisDefinition, (k) -> new HashSet<>()).add(indexName);
         }
     }
 
@@ -364,40 +431,48 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
     }
 
     /**
-     * Generate a list of actions for a user to take that should allow this shard to be assigned.
+     * Generate a list of diagnoses that'll contain the instructions for a user to take to allow this shard to be assigned.
      * @param shardRouting An unassigned shard routing
      * @param state State of the cluster
-     * @return A list of actions for the user to take for this shard
+     * @return A list of diagnoses for the provided unassigned shard
      */
-    List<UserAction.Definition> diagnoseUnassignedShardRouting(ShardRouting shardRouting, ClusterState state) {
-        List<UserAction.Definition> actions = new ArrayList<>();
+    List<Diagnosis.Definition> diagnoseUnassignedShardRouting(ShardRouting shardRouting, ClusterState state) {
+        List<Diagnosis.Definition> diagnosisDefs = new ArrayList<>();
         LOGGER.trace("Diagnosing unassigned shard [{}] due to reason [{}]", shardRouting.shardId(), shardRouting.unassignedInfo());
         switch (shardRouting.unassignedInfo().getLastAllocationStatus()) {
             case NO_VALID_SHARD_COPY:
                 if (UnassignedInfo.Reason.NODE_LEFT == shardRouting.unassignedInfo().getReason()) {
-                    actions.add(ACTION_RESTORE_FROM_SNAPSHOT);
+                    diagnosisDefs.add(ACTION_RESTORE_FROM_SNAPSHOT);
+                }
+                break;
+            case NO_ATTEMPT:
+                if (shardRouting.unassignedInfo().isDelayed()) {
+                    diagnosisDefs.add(DIAGNOSIS_WAIT_FOR_OR_FIX_DELAYED_SHARDS);
+                } else {
+                    diagnosisDefs.addAll(explainAllocationsAndDiagnoseDeciders(shardRouting, state));
                 }
                 break;
             case DECIDERS_NO:
-                actions.addAll(explainAllocationsAndDiagnoseDeciders(shardRouting, state));
+                diagnosisDefs.addAll(explainAllocationsAndDiagnoseDeciders(shardRouting, state));
                 break;
-            default:
+            case DELAYED_ALLOCATION:
+                diagnosisDefs.add(DIAGNOSIS_WAIT_FOR_OR_FIX_DELAYED_SHARDS);
                 break;
         }
-        if (actions.isEmpty()) {
-            actions.add(ACTION_CHECK_ALLOCATION_EXPLAIN_API);
+        if (diagnosisDefs.isEmpty()) {
+            diagnosisDefs.add(ACTION_CHECK_ALLOCATION_EXPLAIN_API);
         }
-        return actions;
+        return diagnosisDefs;
     }
 
     /**
      * For a shard that is unassigned due to a DECIDERS_NO result, this will explain the allocation and attempt to generate
-     * user actions that should allow the shard to be assigned.
+     * a list of diagnoses that should allow the shard to be assigned.
      * @param shardRouting The shard routing that is unassigned with a last status of DECIDERS_NO
      * @param state Current cluster state
-     * @return a list of actions for the user to take
+     * @return A list of diagnoses for the provided unassigned shard
      */
-    private List<UserAction.Definition> explainAllocationsAndDiagnoseDeciders(ShardRouting shardRouting, ClusterState state) {
+    private List<Diagnosis.Definition> explainAllocationsAndDiagnoseDeciders(ShardRouting shardRouting, ClusterState state) {
         LOGGER.trace("Executing allocation explain on shard [{}]", shardRouting.shardId());
         RoutingAllocation allocation = new RoutingAllocation(
             allocationService.getAllocationDeciders(),
@@ -436,33 +511,33 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
             List<NodeAllocationResult> nodeAllocationResults = allocateDecision.getNodeDecisions();
             return diagnoseAllocationResults(shardRouting, state, nodeAllocationResults);
         } else {
-            return Collections.emptyList();
+            return List.of();
         }
     }
 
     /**
-     * Generates a list of user actions to take for an unassigned shard by inspecting a list of NodeAllocationResults for
+     * Generates a list of diagnoses for an unassigned shard by inspecting a list of NodeAllocationResults for
      * well known problems.
      * @param shardRouting The unassigned shard.
      * @param state Current cluster state.
      * @param nodeAllocationResults A list of results for each node in the cluster from the allocation explain api
-     * @return A list of user actions to take.
+     * @return A list of diagnoses for the provided unassigned shard
      */
-    List<UserAction.Definition> diagnoseAllocationResults(
+    List<Diagnosis.Definition> diagnoseAllocationResults(
         ShardRouting shardRouting,
         ClusterState state,
         List<NodeAllocationResult> nodeAllocationResults
     ) {
         IndexMetadata index = state.metadata().index(shardRouting.index());
-        List<UserAction.Definition> actions = new ArrayList<>();
+        List<Diagnosis.Definition> diagnosisDefs = new ArrayList<>();
         if (index != null) {
-            actions.addAll(checkIsAllocationDisabled(index, nodeAllocationResults));
-            actions.addAll(checkDataTierRelatedIssues(index, nodeAllocationResults, state));
+            diagnosisDefs.addAll(checkIsAllocationDisabled(index, nodeAllocationResults));
+            diagnosisDefs.addAll(checkDataTierRelatedIssues(index, nodeAllocationResults, state));
         }
-        if (actions.isEmpty()) {
-            actions.add(ACTION_CHECK_ALLOCATION_EXPLAIN_API);
+        if (diagnosisDefs.isEmpty()) {
+            diagnosisDefs.add(ACTION_CHECK_ALLOCATION_EXPLAIN_API);
         }
-        return actions;
+        return diagnosisDefs;
     }
 
     /**
@@ -479,13 +554,13 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
     }
 
     /**
-     * Generates a user action if a shard cannot be allocated anywhere because allocation is disabled for that shard
+     * Generates a list of diagnoses if a shard cannot be allocated anywhere because allocation is disabled for that shard
      * @param indexMetadata from the index shard being diagnosed
      * @param nodeAllocationResults allocation decision results for all nodes in the cluster.
-     * @return A list of user actions to take.
+     * @return A list of diagnoses for the provided unassigned shard
      */
-    List<UserAction.Definition> checkIsAllocationDisabled(IndexMetadata indexMetadata, List<NodeAllocationResult> nodeAllocationResults) {
-        List<UserAction.Definition> actions = new ArrayList<>();
+    List<Diagnosis.Definition> checkIsAllocationDisabled(IndexMetadata indexMetadata, List<NodeAllocationResult> nodeAllocationResults) {
+        List<Diagnosis.Definition> diagnosisDefs = new ArrayList<>();
         if (nodeAllocationResults.stream().allMatch(hasDeciderResult(EnableAllocationDecider.NAME, Decision.Type.NO))) {
             // Check the routing settings for index
             Settings indexSettings = indexMetadata.getSettings();
@@ -496,29 +571,29 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
             );
             if (EnableAllocationDecider.Allocation.ALL != indexLevelAllocation) {
                 // Index setting is not ALL
-                actions.add(ACTION_ENABLE_INDEX_ROUTING_ALLOCATION);
+                diagnosisDefs.add(ACTION_ENABLE_INDEX_ROUTING_ALLOCATION);
             }
             if (EnableAllocationDecider.Allocation.ALL != clusterLevelAllocation) {
                 // Cluster setting is not ALL
-                actions.add(ACTION_ENABLE_CLUSTER_ROUTING_ALLOCATION);
+                diagnosisDefs.add(ACTION_ENABLE_CLUSTER_ROUTING_ALLOCATION);
             }
         }
-        return actions;
+        return diagnosisDefs;
     }
 
     /**
-     * Generates user actions for common problems that keep a shard from allocating to nodes in a data tier.
+     * Generates a list of diagnoses for common problems that keep a shard from allocating to nodes in a data tier.
      * @param indexMetadata Index metadata for the shard being diagnosed.
      * @param nodeAllocationResults allocation decision results for all nodes in the cluster.
      * @param clusterState the current cluster state.
-     * @return a list of user actions to take.
+     * @return A list of diagnoses for the provided unassigned shard
      */
-    List<UserAction.Definition> checkDataTierRelatedIssues(
+    List<Diagnosis.Definition> checkDataTierRelatedIssues(
         IndexMetadata indexMetadata,
         List<NodeAllocationResult> nodeAllocationResults,
         ClusterState clusterState
     ) {
-        List<UserAction.Definition> actions = new ArrayList<>();
+        List<Diagnosis.Definition> diagnosisDefs = new ArrayList<>();
         if (indexMetadata.getTierPreference().size() > 0) {
             List<NodeAllocationResult> dataTierAllocationResults = nodeAllocationResults.stream()
                 .filter(hasDeciderResult(DATA_TIER_ALLOCATION_DECIDER_NAME, Decision.Type.YES))
@@ -526,7 +601,7 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
             if (dataTierAllocationResults.isEmpty()) {
                 // Shard must be allocated on specific tiers but no nodes were enabled for those tiers.
                 for (String tier : indexMetadata.getTierPreference()) {
-                    Optional.ofNullable(ACTION_ENABLE_TIERS_LOOKUP.get(tier)).ifPresent(actions::add);
+                    Optional.ofNullable(ACTION_ENABLE_TIERS_LOOKUP.get(tier)).ifPresent(diagnosisDefs::add);
                 }
             } else {
                 // Collect the nodes from the tiers this index is allowed on
@@ -549,17 +624,17 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
                     .orElse(null);
 
                 // Run checks for data tier specific problems
-                actions.addAll(
+                diagnosisDefs.addAll(
                     checkDataTierAtShardLimit(indexMetadata, clusterState, dataTierAllocationResults, dataTierNodes, preferredTier)
                 );
-                actions.addAll(checkDataTierShouldMigrate(indexMetadata, dataTierAllocationResults, dataTierNodes));
-                checkNotEnoughNodesInDataTier(dataTierAllocationResults, preferredTier).ifPresent(actions::add);
+                diagnosisDefs.addAll(checkDataTierShouldMigrate(indexMetadata, dataTierAllocationResults, preferredTier, dataTierNodes));
+                checkNotEnoughNodesInDataTier(dataTierAllocationResults, preferredTier).ifPresent(diagnosisDefs::add);
             }
         }
-        return actions;
+        return diagnosisDefs;
     }
 
-    private List<UserAction.Definition> checkDataTierAtShardLimit(
+    private List<Diagnosis.Definition> checkDataTierAtShardLimit(
         IndexMetadata indexMetadata,
         ClusterState clusterState,
         List<NodeAllocationResult> dataTierAllocationResults,
@@ -568,7 +643,7 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
     ) {
         // All tier nodes at shards limit?
         if (dataTierAllocationResults.stream().allMatch(hasDeciderResult(ShardsLimitAllocationDecider.NAME, Decision.Type.NO))) {
-            List<UserAction.Definition> actions = new ArrayList<>();
+            List<Diagnosis.Definition> diagnosisDefs = new ArrayList<>();
             // We need the routing nodes for the tiers this index is allowed on to determine the offending shard limits
             List<RoutingNode> dataTierRoutingNodes = clusterState.getRoutingNodes()
                 .stream()
@@ -598,39 +673,41 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
                 indexShardsPerNodeShouldChange = minShardCountInTier >= indexShardsPerNode;
             }
 
-            // Add appropriate user action
+            // Add appropriate diagnosis
             if (preferredTier != null) {
                 // We cannot allocate the shard to the most preferred tier because a shard limit is reached.
                 if (clusterShardsPerNodeShouldChange) {
-                    Optional.ofNullable(ACTION_INCREASE_SHARD_LIMIT_CLUSTER_SETTING_LOOKUP.get(preferredTier)).ifPresent(actions::add);
+                    Optional.ofNullable(ACTION_INCREASE_SHARD_LIMIT_CLUSTER_SETTING_LOOKUP.get(preferredTier))
+                        .ifPresent(diagnosisDefs::add);
                 }
                 if (indexShardsPerNodeShouldChange) {
-                    Optional.ofNullable(ACTION_INCREASE_SHARD_LIMIT_INDEX_SETTING_LOOKUP.get(preferredTier)).ifPresent(actions::add);
+                    Optional.ofNullable(ACTION_INCREASE_SHARD_LIMIT_INDEX_SETTING_LOOKUP.get(preferredTier)).ifPresent(diagnosisDefs::add);
                 }
             } else {
                 // We couldn't determine a desired tier. This is likely because there are no tiers in the cluster,
                 // only `data` nodes. Give a generic ask for increasing the shard limit.
                 if (clusterShardsPerNodeShouldChange) {
-                    actions.add(ACTION_INCREASE_SHARD_LIMIT_CLUSTER_SETTING);
+                    diagnosisDefs.add(ACTION_INCREASE_SHARD_LIMIT_CLUSTER_SETTING);
                 }
                 if (indexShardsPerNodeShouldChange) {
-                    actions.add(ACTION_INCREASE_SHARD_LIMIT_INDEX_SETTING);
+                    diagnosisDefs.add(ACTION_INCREASE_SHARD_LIMIT_INDEX_SETTING);
                 }
             }
-            return actions;
+            return diagnosisDefs;
         } else {
-            return Collections.emptyList();
+            return List.of();
         }
     }
 
-    private List<UserAction.Definition> checkDataTierShouldMigrate(
+    private List<Diagnosis.Definition> checkDataTierShouldMigrate(
         IndexMetadata indexMetadata,
         List<NodeAllocationResult> dataTierAllocationResults,
+        @Nullable String preferredTier,
         Set<DiscoveryNode> dataTierNodes
     ) {
         // Check if index has filter requirements on the old "data" attribute that might be keeping it from allocating.
         if (dataTierAllocationResults.stream().allMatch(hasDeciderResult(FilterAllocationDecider.NAME, Decision.Type.NO))) {
-            List<UserAction.Definition> actions = new ArrayList<>();
+            List<Diagnosis.Definition> diagnosisDefs = new ArrayList<>();
             Map<String, List<String>> requireAttributes = INDEX_ROUTING_REQUIRE_GROUP_SETTING.getAsMap(indexMetadata.getSettings());
             List<String> requireDataAttributes = requireAttributes.get("data");
             DiscoveryNodeFilters requireFilter = requireDataAttributes == null
@@ -646,20 +723,28 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
                 // Check if the data tier nodes this shard is allowed on have data attributes that match
                 if (requireFilter != null && dataTierNodes.stream().noneMatch(requireFilter::match)) {
                     // No data tier nodes match the required data attribute
-                    actions.add(ACTION_MIGRATE_TIERS_AWAY_FROM_REQUIRE_DATA);
+                    diagnosisDefs.add(
+                        Optional.ofNullable(preferredTier)
+                            .map(ACTION_MIGRATE_TIERS_AWAY_FROM_REQUIRE_DATA_LOOKUP::get)
+                            .orElse(ACTION_MIGRATE_TIERS_AWAY_FROM_REQUIRE_DATA)
+                    );
                 }
                 if (includeFilter != null && dataTierNodes.stream().noneMatch(includeFilter::match)) {
                     // No data tier nodes match the included data attributes
-                    actions.add(ACTION_MIGRATE_TIERS_AWAY_FROM_INCLUDE_DATA);
+                    diagnosisDefs.add(
+                        Optional.ofNullable(preferredTier)
+                            .map(ACTION_MIGRATE_TIERS_AWAY_FROM_INCLUDE_DATA_LOOKUP::get)
+                            .orElse(ACTION_MIGRATE_TIERS_AWAY_FROM_INCLUDE_DATA)
+                    );
                 }
             }
-            return actions;
+            return diagnosisDefs;
         } else {
-            return Collections.emptyList();
+            return List.of();
         }
     }
 
-    private Optional<UserAction.Definition> checkNotEnoughNodesInDataTier(
+    private Optional<Diagnosis.Definition> checkNotEnoughNodesInDataTier(
         List<NodeAllocationResult> dataTierAllocationResults,
         @Nullable String preferredTier
     ) {
@@ -686,12 +771,12 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
             this.clusterMetadata = clusterMetadata;
         }
 
-        public void addPrimary(ShardRouting routing, ClusterState state, NodesShutdownMetadata shutdowns, boolean explain) {
-            primaries.increment(routing, state, shutdowns, explain);
+        public void addPrimary(ShardRouting routing, ClusterState state, NodesShutdownMetadata shutdowns, boolean verbose) {
+            primaries.increment(routing, state, shutdowns, verbose);
         }
 
-        public void addReplica(ShardRouting routing, ClusterState state, NodesShutdownMetadata shutdowns, boolean explain) {
-            replicas.increment(routing, state, shutdowns, explain);
+        public void addReplica(ShardRouting routing, ClusterState state, NodesShutdownMetadata shutdowns, boolean verbose) {
+            replicas.increment(routing, state, shutdowns, verbose);
         }
 
         public HealthStatus getStatus() {
@@ -704,7 +789,7 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
             }
         }
 
-        public String getSummary() {
+        public String getSymptom() {
             var builder = new StringBuilder("This cluster has ");
             if (primaries.unassigned > 0
                 || primaries.unassigned_new > 0
@@ -713,11 +798,11 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
                 || replicas.unassigned_restarting > 0) {
                 builder.append(
                     Stream.of(
-                        createMessage(primaries.unassigned, "unavailable primary", "unavailable primaries"),
-                        createMessage(primaries.unassigned_new, "creating primary", "creating primaries"),
-                        createMessage(primaries.unassigned_restarting, "restarting primary", "restarting primaries"),
-                        createMessage(replicas.unassigned, "unavailable replica", "unavailable replicas"),
-                        createMessage(replicas.unassigned_restarting, "restarting replica", "restarting replicas")
+                        createMessage(primaries.unassigned, "unavailable primary shard", "unavailable primary shards"),
+                        createMessage(primaries.unassigned_new, "creating primary shard", "creating primary shards"),
+                        createMessage(primaries.unassigned_restarting, "restarting primary shard", "restarting primary shards"),
+                        createMessage(replicas.unassigned, "unavailable replica shard", "unavailable replica shards"),
+                        createMessage(replicas.unassigned_restarting, "restarting replica shard", "restarting replica shards")
                     ).flatMap(Function.identity()).collect(joining(", "))
                 ).append(".");
             } else {
@@ -734,8 +819,8 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
             };
         }
 
-        public HealthIndicatorDetails getDetails(boolean explain) {
-            if (explain) {
+        public HealthIndicatorDetails getDetails(boolean verbose) {
+            if (verbose) {
                 return new SimpleHealthIndicatorDetails(
                     Map.of(
                         "unassigned_primaries",
@@ -771,9 +856,17 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
                     "Cannot add data to %d %s [%s]. Searches might return incomplete results.",
                     primaries.indicesWithUnavailableShards.size(),
                     primaries.indicesWithUnavailableShards.size() == 1 ? "index" : "indices",
-                    getTruncatedIndicesString(primaries.indicesWithUnavailableShards, clusterMetadata)
+                    getTruncatedIndices(primaries.indicesWithUnavailableShards, clusterMetadata)
                 );
-                impacts.add(new HealthIndicatorImpact(1, impactDescription, List.of(ImpactArea.INGEST, ImpactArea.SEARCH)));
+                impacts.add(
+                    new HealthIndicatorImpact(
+                        NAME,
+                        PRIMARY_UNASSIGNED_IMPACT_ID,
+                        1,
+                        impactDescription,
+                        List.of(ImpactArea.INGEST, ImpactArea.SEARCH)
+                    )
+                );
             }
             /*
              * It is possible that we're working with an intermediate cluster state, and that for an index we have no primary but a replica
@@ -788,71 +881,55 @@ public class ShardsAvailabilityHealthIndicatorService implements HealthIndicator
                     "Searches might be slower than usual. Fewer redundant copies of the data exist on %d %s [%s].",
                     indicesWithUnavailableReplicasOnly.size(),
                     indicesWithUnavailableReplicasOnly.size() == 1 ? "index" : "indices",
-                    getTruncatedIndicesString(indicesWithUnavailableReplicasOnly, clusterMetadata)
+                    getTruncatedIndices(indicesWithUnavailableReplicasOnly, clusterMetadata)
                 );
-                impacts.add(new HealthIndicatorImpact(2, impactDescription, List.of(ImpactArea.SEARCH)));
+                impacts.add(
+                    new HealthIndicatorImpact(NAME, REPLICA_UNASSIGNED_IMPACT_ID, 2, impactDescription, List.of(ImpactArea.SEARCH))
+                );
             }
             return impacts;
         }
 
         /**
-         * Summarizes the user actions that are needed to solve unassigned primary and replica shards.
-         * @param explain true if user actions should be generated, false if they should be omitted.
-         * @return A summary of user actions. Alternatively, an empty list if none were found or explain is false.
+         * Returns the diagnosis for unassigned primary and replica shards.
+         * @param verbose true if the diagnosis should be generated, false if they should be omitted.
+         * @return The diagnoses list the indicator identified. Alternatively, an empty list if none were found or verbose is false.
          */
-        public List<UserAction> getUserActions(boolean explain) {
-            if (explain) {
-                Map<UserAction.Definition, Set<String>> actionsToAffectedIndices = new HashMap<>(primaries.userActions);
-                replicas.userActions.forEach((actionDefinition, indicesWithReplicasUnassigned) -> {
-                    Set<String> indicesWithPrimariesUnassigned = actionsToAffectedIndices.get(actionDefinition);
+        public List<Diagnosis> getDiagnosis(boolean verbose) {
+            if (verbose) {
+                Map<Diagnosis.Definition, Set<String>> diagnosisToAffectedIndices = new HashMap<>(primaries.diagnosisDefinitions);
+                replicas.diagnosisDefinitions.forEach((diagnosisDef, indicesWithReplicasUnassigned) -> {
+                    Set<String> indicesWithPrimariesUnassigned = diagnosisToAffectedIndices.get(diagnosisDef);
                     if (indicesWithPrimariesUnassigned == null) {
-                        actionsToAffectedIndices.put(actionDefinition, indicesWithReplicasUnassigned);
+                        diagnosisToAffectedIndices.put(diagnosisDef, indicesWithReplicasUnassigned);
                     } else {
                         indicesWithPrimariesUnassigned.addAll(indicesWithReplicasUnassigned);
                     }
                 });
-                if (actionsToAffectedIndices.isEmpty()) {
-                    return Collections.emptyList();
+                if (diagnosisToAffectedIndices.isEmpty()) {
+                    return List.of();
                 } else {
-                    return actionsToAffectedIndices.entrySet()
+                    return diagnosisToAffectedIndices.entrySet()
                         .stream()
                         .map(
-                            e -> new UserAction(
+                            e -> new Diagnosis(
                                 e.getKey(),
-                                e.getValue().stream().sorted(byPriorityThenByName(clusterMetadata)).collect(Collectors.toList())
+                                List.of(
+                                    new Diagnosis.Resource(
+                                        INDEX,
+                                        e.getValue()
+                                            .stream()
+                                            .sorted(indicesComparatorByPriorityAndName(clusterMetadata))
+                                            .collect(Collectors.toList())
+                                    )
+                                )
                             )
                         )
                         .collect(Collectors.toList());
                 }
             } else {
-                return Collections.emptyList();
+                return List.of();
             }
         }
-    }
-
-    private static String getTruncatedIndicesString(Set<String> indices, Metadata clusterMetadata) {
-        final int maxIndices = 10;
-        String truncatedIndicesString = indices.stream()
-            .sorted(byPriorityThenByName(clusterMetadata))
-            .limit(maxIndices)
-            .collect(joining(", "));
-        if (maxIndices < indices.size()) {
-            truncatedIndicesString = truncatedIndicesString + ", ...";
-        }
-        return truncatedIndicesString;
-    }
-
-    /**
-     * Sorts index names by their priority first, then alphabetically by name. If the priority cannot be determined for an index then
-     * a priority of -1 is used to sort it behind other index names.
-     * @param clusterMetadata Used to look up index priority.
-     * @return Comparator instance
-     */
-    private static Comparator<String> byPriorityThenByName(Metadata clusterMetadata) {
-        // We want to show indices with a numerically higher index.priority first (since lower priority ones might get truncated):
-        return Comparator.comparingInt((String indexName) -> {
-            IndexMetadata indexMetadata = clusterMetadata.index(indexName);
-            return indexMetadata == null ? -1 : indexMetadata.priority();
-        }).reversed().thenComparing(Comparator.naturalOrder());
     }
 }
